math operations are in place, not operational yet
git-svn-id: svn://svn.jrock.us/cpan_modules/templates@86 01d9642f-1d18-0410-bea3-844bd6f27a17

--- a/t/templates/test.tt
+++ b/t/templates/test.tt
@@ -5,7 +5,7 @@
   This is some text.  Blah, blah, blah.
 
   [% IF something IS true %]
-     [% WHILE foo = bar %]
+     [% LOOP foo = bar %]
 	Foo is still bar.
      [% END %]
   [% ELSIF something IS false %]
@@ -14,7 +14,7 @@
      Tristate!     
   [% END %]
 
-  [% LOOP OVER foo AS bar %]
+  [% LOOP foo = bar %]
      This is [% bar %] inside [% foo %].
   [% END %]
 
